--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "test": "ts-node node_modules/jasmine/bin/jasmine jasmine src/**/*.ts",
-    "build-dev": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json"
+    "build-dev": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json",
+    "pre-commit": "npm test && npm run build-dev"
   },
   "repository": {
     "type": "git",
