--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "ts-node node_modules/jasmine/bin/jasmine jasmine src/**/*.ts",
     "build-dev": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json",
-    "pre-commit": "npm test && npm run build-dev"
+    "precommit": "npm test && npm run build-dev"
   },
   "repository": {
     "type": "git",
