adding pre and post version npm scripts

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   ],
   "scripts": {
     "test": "ts-node node_modules/jasmine/bin/jasmine jasmine src/**/*.ts",
-    "build-dev": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json",
-    "precommit": "npm test && npm run build-dev"
+    "build": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json",
+    "preversion": "npm test",
+    "version": "npm run build && git add -A dist",
+    "postversion": "git push"
   },
   "repository": {
     "type": "git",
