--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
   "homepage": "https://github.com/Treee/webgl2-engine#readme",
   "devDependencies": {
     "@types/jasmine": "^2.8.6",
-    "@types/three": "^0.91.10",
-    "@types/webgl2": "0.0.4",
+    "@types/three": "^0.93.12",
+    "@types/webgl2": "^0.0.4",
     "jasmine": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
     "nodemon": "^1.17.3",
     "ts-node": "^6.0.1",
-    "typescript": "^2.8.3"
+    "typescript": "^3.1.6"
   },
   "dependencies": {
-    "three": "^0.92.0"
+    "three": "^0.99.0"
   }
 }
