--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "three": "^0.99.0"
+    "three": "^0.99.0",
+    "twgl.js": "^4.8.2"
   }
 }
