--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "dist/**/*"
   ],
   "scripts": {
-    "test": "ts-node node_modules/jasmine/bin/jasmine jasmine src/**/*.ts",
-    "test1": "ts-node --project ./tsconfig.json node_modules/jasmine/bin/jasmine --config=spec/support/jasmine.json",
-    "version": "npm run build && git add -A dist",
+    "test": "ts-node --project ./tsconfig.json node_modules/jasmine/bin/jasmine --config=spec/support/jasmine.json",
+    "version": "npm run test && npm run build && git add -A dist",
     "postversion": "git push",
     "build": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json",
-    "precommit": "npm version patch",
+    "precommit": "npm run test && npm version patch",
     "build-prod-minor": "npm version minor",
     "build-prod-major": "npm version major"
   },
