--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "version": "npm run test && npm run build && git add -A dist",
     "postversion": "git push",
     "build": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json",
-    "precommit": "npm run test && npm version patch",
+    "precommit": "npm version patch",
     "build-prod-minor": "npm version minor",
     "build-prod-major": "npm version major"
   },
