--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "test": "ts-node --project ./tsconfig.json node_modules/jasmine/bin/jasmine --config=spec/support/jasmine.json",
-    "version": "npm run test && npm run build && git add -A dist",
+    "version": "npm run test && npm audit && npm run build && git add -A dist",
     "postversion": "git push",
     "build": "ts-node node_modules/typescript/bin/tsc -p tsconfig.json",
     "precommit": "npm version patch",
