--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
     "include": [
-        "src/**/*"
+        "src/**/*",
     ],
     "exclude": [
-        "src/**/*-spec.ts"
+        "src/**/*-spec.ts",
+        "dist",
+        "node_modules"
     ],
     "compilerOptions": {
         "target": "es2017",
@@ -12,6 +14,8 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "strict": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true
     }
 }
